--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -1,22 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <TextView
+        android:id="@+id/error"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        style="@style/ErrorText"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/bird"
+        android:src="@drawable/logo"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintTop_toBottomOf="@+id/error" />
     <EditText
         android:id="@+id/username"
-        android:hint="Username" />
+        android:hint="Username"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        app:layout_constraintHieght_percent="0.15"
+        app:layout_constraintTop_toBottomOf="@+id/bird" />
     <EditText
         android:id="@+id/password"
         android:hint="Password"
-        android:inputType="Password" />
+        android:inputType="textPassword"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        app:layout_constraintHieght_percent="0.15"
+        app:layout_constraintTop_toBottomOf="@+id/username" />
     <Button
         android:id="@+id/sign_in_button"
-        android:text="Log In"
-        android:onClick="signIn" />
+        android:text="Login"
+        android:textSize="15sp"
+        android:onClick="signIn"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        app:layout_constraintHieght_percent="0.15"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
     <TextView
         android:id="@+id/no_account"
-        android:text="@string/no_account" />
-
-
+        android:text="@string/no_account"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        app:layout_constraintHieght_percent="0.15"
+        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
 
 </ConstraintLayout>
