--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -49,4 +49,4 @@
         app:layout_constraintHeight_percent="0.15"
         app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
 
-</ConstraintLayout>
+</android.support.constraint.ConstraintLayout>
