--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView
         android:id="@+id/error"
+        android:gravity="center"
         android:layout_height="0dp"
         android:layout_width="match_parent"
         style="@style/ErrorText"
@@ -44,8 +45,10 @@
     <TextView
         android:id="@+id/no_account"
         android:text="@string/no_account"
+        android:gravity="center"
         android:layout_height="0dp"
         android:layout_width="match_parent"
+        style="@style/LinkText"
         app:layout_constraintHeight_percent="0.15"
         app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
 
