--- a/app/src/main/res/layout/activity_board_list.xml
+++ b/app/src/main/res/layout/activity_board_list.xml
@@ -18,6 +18,15 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:title="@string/app_name"/> <!-- possibly make title "Your Boards" for clarity? -->
 
+    <!-- fragment container to hold settings fragment -->
+    <FrameLayout
+        android:id="@+id/board_list_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/> <!-- TODO: this is super wrong? -->
+
+
+    <!-- rv to hold list of boards -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/board_recycler"
         android:layout_width="match_parent"
@@ -26,13 +35,15 @@
         tools:listitem="@layout/list_item_recycler"
         />
 
-    <!-- loading views -->
+
+    <!-- loading view -->
     <ProgressBar
         android:id="@+id/progress_dialogue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/loading_text"
         android:layout_gravity="center_horizontal"
+        style="?android:attr/progressBarStyleLarge"
         android:paddingTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintRight_toRightOf="parent"
@@ -43,11 +54,12 @@
     <!-- error views -->
     <ImageView
         android:id="@+id/error_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="@android:dimen/thumbnail_height"
         android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:contentDescription="@string/server_error"
+        android:scaleType="fitCenter"
         android:src="@drawable/ic_warning_black_24dp"
         android:visibility="gone"/>
 
@@ -55,15 +67,20 @@
         android:id="@+id/error_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
         android:text="@string/wifi_error"
-        android:textSize="15sp"
+        android:textSize="20sp"
+        android:textColor="@color/grey"
         android:visibility="gone"/>
 
     <Button
         android:id="@+id/retry_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="25sp"
+        android:background="@color/blue"
+        android:textColor="@color/black"
         android:text="@string/retry_btn"
         android:visibility="gone"/>
 
