--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.grammiegram.grammiegram_android.activities.LoginActivity">
+    tools:context="com.grammiegram.grammiegram_android.activities.SignInActivity">
 
     <!-- Login progress -->
     <ProgressBar
