--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     tools:context="com.grammiegram.grammiegram_android.fragments.SettingsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <!-- put joels stuff here-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="place holder" />
 
 </android.support.constraint.ConstraintLayout>
