close soft keyboard more easily on login activity

--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -14,28 +14,33 @@
     <ImageView
         android:id="@+id/bird"
         android:src="@drawable/logo"
+        android:contentDescription="@string/app_name"
         android:layout_height="0dp"
         android:layout_width="match_parent"
         app:layout_constraintHeight_percent="0.3"
         app:layout_constraintTop_toBottomOf="@+id/error" />
     <EditText
         android:id="@+id/username"
-        android:hint="Username"
+        android:hint="@string/username_hint"
         android:layout_height="0dp"
         android:layout_width="match_parent"
         app:layout_constraintHeight_percent="0.15"
-        app:layout_constraintTop_toBottomOf="@+id/bird" />
+        app:layout_constraintTop_toBottomOf="@+id/bird"
+        android:imeOptions="actionDone"
+        android:singleLine="true"/>
     <EditText
         android:id="@+id/password"
-        android:hint="Password"
+        android:hint="@string/password_hint"
         android:inputType="textPassword"
         android:layout_height="0dp"
         android:layout_width="match_parent"
         app:layout_constraintHeight_percent="0.15"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        app:layout_constraintTop_toBottomOf="@+id/username"
+        android:imeOptions="actionDone"
+        android:singleLine="true"/>
     <Button
         android:id="@+id/sign_in_button"
-        android:text="Login"
+        android:text="@string/login_button"
         android:textSize="15sp"
         android:onClick="signIn"
         android:layout_height="0dp"
