--- a/app/src/main/res/layout/activity_list_grams.xml
+++ b/app/src/main/res/layout/activity_list_grams.xml
@@ -10,11 +10,13 @@
         android:gravity="center"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:id="@+id/token"
+    <Button
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="center"
+        android:text="Refresh!"
+        android:onClick="refresh"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintTop_toBottomOf="@+id/greeting"/>
 
