--- a/app/src/main/res/layout/list_item_recycler.xml
+++ b/app/src/main/res/layout/list_item_recycler.xml
@@ -3,22 +3,19 @@
 xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view_item"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_marginBottom="12dp"
-android:layout_marginLeft="24dp"
-android:layout_marginRight="24dp"
-android:clickable="false"
-android:foreground="?attr/selectableItemBackground"
-app:cardBackgroundColor="@color/grey">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="12dp"
+    android:layout_marginLeft="24dp"
+    android:layout_marginRight="24dp"
+    android:foreground="?attr/selectableItemBackground"
+    app:cardBackgroundColor="@color/grey">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:layout_gravity="center_vertical"
-        android:clickable="true"
-        android:focusable="false">
+        android:layout_gravity="center_vertical">
 
 
         <TextView
@@ -50,40 +47,5 @@ app:cardBackgroundColor="@color/grey">
             app:layout_constraintTop_toBottomOf="@+id/rv_item_text"
             app:layout_constraintVertical_bias="0.312" />
     </android.support.constraint.ConstraintLayout>
-
-<!--<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:padding="16dp"
-        android:layout_marginRight="56dp">
-
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="I Sing the Body Electric"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_subtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_title"
-            android:text="Monday 8am - 9pm"
-            android:textColor="@color/white" />
-    </LinearLayout>
-
-
-</RelativeLayout>-->
 
 </android.support.v7.widget.CardView>
