--- a/app/src/main/res/layout/list_item_recycler.xml
+++ b/app/src/main/res/layout/list_item_recycler.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,6 +10,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
     android:foreground="?attr/selectableItemBackground"
     app:cardBackgroundColor="@color/grey">
 
+    <!-- TODO: change from hard coded values to % values for better scaling -->
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,8 +20,8 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 
         <TextView
             android:id="@+id/rv_item_text"
-            android:layout_width="128dp"
-            android:layout_height="22dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="8dp"
