--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -47,9 +47,22 @@
         android:text="@string/no_account"
         android:gravity="center"
         android:layout_height="0dp"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         style="@style/LinkText"
         app:layout_constraintHeight_percent="0.15"
+        app:layout_constraintWidth_percent="0.5"
         app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
+
+    <TextView
+        android:id="@+id/forogt"
+        android:text="@string/forgot"
+        android:gravity="center"
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        style="@style/LinkText"
+        app:layout_constraintHeight_percent="0.15"
+        app:layout_constraintWidth_percent="0.5"
+        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
+        app:layout_constraintLeft_toRightOf="@id/no_account" />
 
 </android.support.constraint.ConstraintLayout>
