--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -33,7 +33,7 @@
         android:id="@+id/btn_left"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="<"
+        android:text="left"
         android:textColor="@color/black"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,7 +46,7 @@
         android:id="@+id/btn_right"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text=">"
+        android:text="right"
         android:textColor="@color/black"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
