--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -9,24 +9,6 @@
     android:fitsSystemWindows="true"
     tools:context="com.grammiegram.grammiegram_android.activities.BoardActivity">
 
-    <!--<android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_weight="1"
-            android:background="@color/grammiegramRed"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="@string/app_name" />
-
-    </android.support.design.widget.AppBarLayout>-->
-
 
     <!-- container for paging gram fragments -->
     <android.support.v4.view.ViewPager
@@ -37,12 +19,13 @@
 
     <ImageView
         android:id="@+id/no_grams_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:contentDescription="@string/logo_content_desc"
         android:src="@drawable/vector_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_percent=".3"
         />
 
 
