--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -7,10 +7,23 @@
     android:background="@color/white"
     tools:context="com.grammiegram.grammiegram_android.fragments.BoardPagerFragment">
 
-    <!-- TODO: add buttons images android:src="@android:drawable/arrow_up_float"
-    TODO: word wrapping so words aren't split???
-    TODO: make bird image have less empty space on smaller screens -->
+    <!-- TODO: add buttons images android:src="@android:drawable/....."
+    TODO: word wrapping so words aren't split???-->
 
+    <TextView
+        android:id="@+id/message_from"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="@string/from"
+        android:textColor="@color/black"
+        app:autoSizeTextType="uniform"
+        android:maxLines="1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintBottom_toTopOf="@+id/gram_message"
+        app:layout_constraintEnd_toStartOf="@+id/btn_right"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btn_left"/>
 
     <TextView
         android:id="@+id/gram_message"
@@ -26,7 +39,7 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_right"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_left"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/message_from"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
 
@@ -55,7 +68,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/gram_message"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 
 </android.support.constraint.ConstraintLayout>
