--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -12,7 +12,7 @@
 
     <!-- container for paging gram fragments -->
     <android.support.v4.view.ViewPager
-        android:id="@+id/container"
+        android:id="@+id/gram_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
@@ -84,11 +84,5 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/no_grams_logo"
         app:layout_constraintTop_toBottomOf="@+id/date" />
-
-
-    <!-- <TextClock
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" /> -->
-
 
 </android.support.constraint.ConstraintLayout>
